[package]
name = "flog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
klickhouse = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { version = "0.1.40" }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "default"] }
url = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["clickhouse"] }
tokio-test = { workspace = true }


